# Systray-IoT-Controller

./: README.md
source/: CMakeLists.txt  build-darwin.sh  build.sh  config.c  config.h  config.json  main.c  mqtt.c  mqtt.h  states.h  wait.c  wait.h  window.cpp  window.hpp
